# ncnn_Android_face

./: README.md  facemesh.onnx
ncnn-android-scrfd-master/: local.properties
ncnn-android-scrfd-master/app/src/main/assets/: facemesh-op.param  facemesh-op2.param  faceseg-op.param
ncnn-android-scrfd-master/app/src/main/jni/: CMakeLists.txt  scrfd.cpp  scrfd.h  scrfdncnn.cpp
ncnn-android-scrfd-master/app/src/main/res/values/: strings.xml
ncnn-android-yolov5_face/app/src/main/assets/: yolov5n-0.5.param
ncnn-android-yolov5_face/app/src/main/java/com/tencent/ncnnyoloface/: MainActivity.java  NcnnYoloFace.java
ncnn-android-yolov5_face/app/src/main/jni/: CMakeLists.txt  yoloface.cpp  yoloface.h
ncnn-android-yolov5_face/app/src/main/res/values/: strings.xml
ncnn-android-yolov7_face/app/: build.gradle
ncnn-android-yolov7_face/app/src/main/: AndroidManifest.xml
ncnn-android-yolov7_face/app/src/main/assets/: yolov7-lite-e.param  yolov7-tiny-face.param  yolov7-tiny.param
ncnn-android-yolov7_face/app/src/main/jni/: CMakeLists.txt  yoloface.cpp  yoloface.h  yolofacencnn.cpp
ncnn-android-yolov7_face/app/src/main/res/values/: strings.xml
